# YOLOP-TensorRT

./: CMakeLists.txt  CMakeLists_.txt  CMakeLists__.txt  README.md  buildEngine.cpp  common.hpp  gen_wts.py  inference.cpp  utils.h  yololayer.h  yolop.cpp
include/: common.hpp  network.hpp  utils.hpp
src/: yolop__.cpp
